--- a/file e.html
+++ b/file e.html
@@ -125,7 +125,7 @@ display:block;
          </P>
              <br><br><br>
               <h2><U>5. SIAFU ANTS</U></h2>
-         <img src="Y:\my project of html\siafu-ants.jpg" alt="SIAFU ANTS" width="800px" height="400px">
+         <img src="siafu-ants.jpg" alt="SIAFU ANTS" width="800px" height="400px">
              <center>SIAFU ANTS (wikimedia)</center>
          <P>
      These ants are also known as driver ants. They come in swarms of up to 50,000,000,and<br>
