--- a/about us.html
+++ b/about us.html
@@ -147,7 +147,7 @@ animals, and for the humans who help to make a positive difference for them.
         color:blue;
         }
          </style>
-         <a href= "Y:\my project of html\about us.html"> about us </a>
+         <a href= "https://github.com/yogeshmahajan23/wild-animals/blob/main/about%20us.html"> about us </a>
           <a href= "Y:\my project of html\term.html">  privacy </a>
           <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
     <p>      
