--- a/c qr.html
+++ b/c qr.html
@@ -95,7 +95,7 @@
         color:blue;
         }
          </style>
-        <a href= "Y:\my project of html\about us.html"> about us </a>
+        <a href= "https://github.com/yogeshmahajan23/wild-animals/blob/main/about%20us.html"> about us </a>
           <a href= "Y:\my project of html\term.html"> privacy</a>
           <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
        <p>      
