--- a/contact us.html
+++ b/contact us.html
@@ -111,16 +111,16 @@ display:block;
 <HR>
 
   <ul>
-   <a href=file:///Y:/my%20project%20of%20html/home%20qr.html><li>HOME</a> </li>
+  <a href="https://yogeshmahajan23.github.io/wild-animals/home%20qr.html"><li>HOME</a> </li>
      <a href="#"><LI>POEMS</a> 
          <ul>
-         <a href= "file:///Y:/my%20project%20of%20html/dreamy%20qr.html"><li> Dreamy </li>
-        <a href="file:///Y:/my%20project%20of%20html/simple%20qr.html"> <li> Simple </li>    
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/dreamy%20qr.html"><li> Dreamy </li>
+        <a href="https://yogeshmahajan23.github.io/wild-animals/simple%20qr.html"> <li> Simple </li>    
          </ul>
           </li>
-     <a href="file:///Y:/my%20project%20of%20html/c%20qr.html"><LI>FACILITES</a></li>
-     <a href="file:///Y:/my%20project%20of%20html/d%20qr.html"><LI>HISTORY</a></li>
-         <a href="file:///Y:/my%20project%20of%20html/e%20qr.html"><LI>TOP 10</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/c%20qr.html"><LI>FACILITES</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/d%20qr.html"><LI>HISTORY</a></li>
+         <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
          </ul> <BR> <BR> <BR> <BR> <BR> <BR> <BR>   </center>
  <h4><font color="brown" face="bold"> <marquee behavior="scroll" direction="left">Toll-Free No. :<u>+91</u>  <u>9418922682</u></marquee></font></h4>
          <div id="form"><h2>Enter Your Information:</h2>
@@ -147,9 +147,9 @@ display:block;
          </form>
              <br><br><br><br>
      <hr width="1780px">
-         <a href= "Y:\my project of html\about us.html"> about us </a>
-          <a href= "Y:\my project of html\term.html">  privacy </a>
-          <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/about%20us.html"> about us </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/term.html">  privacy </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/contact%20us.html"> contact us</a><br>
           <center>
    <div id="end">
            Yogesh Copyright © 2024.Copyright<br>
