--- a/dreamy.html
+++ b/dreamy.html
@@ -66,16 +66,16 @@
      <hr>
     <center>
   <ul>
-     <a href="Y:\my project of html\main file.html"><li>HOME</a> </li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/home%20qr.html"><li>HOME</a> </li>
      <a href="#"><LI>POEMS</a> 
          <ul>
-         <a href= "Y:\my project of html\dreamy.html"><li> Dreamy </li>
-        <a href="Y:\my project of html\simple.html"> <li> Simple </li>    
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/dreamy%20qr.html"><li> Dreamy </li>
+        <a href="https://yogeshmahajan23.github.io/wild-animals/simple%20qr.html"> <li> Simple </li>    
          </ul>
           </li>
-     <a href="Y:\my project of html\file c.html"><LI>FACILITES </a></li>
-     <a href="Y:\my project of html\file d.html"><LI>HISTORY</a></li>
-         <a href="Y:\my project of html\file e.html"><LI>TOP 10</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/c%20qr.html"><LI>FACILITES</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/d%20qr.html"><LI>HISTORY</a></li>
+         <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> <br><br><br><br><br><br><br><br><br>
       
        <center> <h1> SNAIL RACES </h1>
@@ -104,9 +104,9 @@ There never is a slower pace than snails competing in a race.<br>
         color:blue;
         }
          </style>
-         <a href= "Y:\my project of html\about us.html"> about us </a>
-          <a href= "Y:\my project of html\term.html">  privacy </a>
-          <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/about%20us.html"> about us </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/term.html">  privacy </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/contact%20us.html"> contact us</a><br>
        <p>      
         Yogesh Copyright 2024.Copyright<br>
         reserved by wild animals.
