--- a/main file.html
+++ b/main file.html
@@ -68,16 +68,16 @@
      <hr>
      <center>
   <ul>
-<a href=file:///Y:/my%20project%20of%20html/home%20qr.html><li>HOME</a> </li>
+<a href="https://yogeshmahajan23.github.io/wild-animals/home%20qr.html"><li>HOME</a> </li>
      <a href="#"><LI>POEMS</a> 
          <ul>
-         <a href= "file:///Y:/my%20project%20of%20html/dreamy%20qr.html"><li> Dreamy </li>
-        <a href="file:///Y:/my%20project%20of%20html/simple%20qr.html"> <li> Simple </li>    
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/dreamy%20qr.html"><li> Dreamy </li>
+        <a href="https://yogeshmahajan23.github.io/wild-animals/simple%20qr.html"> <li> Simple </li>    
          </ul>
           </li>
-     <a href="file:///Y:/my%20project%20of%20html/c%20qr.html"><LI>FACILITES</a></li>
-     <a href="file:///Y:/my%20project%20of%20html/d%20qr.html"><LI>HISTORY</a></li>
-         <a href="file:///Y:/my%20project%20of%20html/e%20qr.html"><LI>TOP 10</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/c%20qr.html"><LI>FACILITES</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/d%20qr.html"><LI>HISTORY</a></li>
+         <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> 
          <br> <br><br><br><br><br><br><br><br>
         <font color="brown" face="Bell MT"><H2>"WELCOME TO OUR WILD OASIS – WHERE EVERY CREATURE HAS A STORY!"</H2></font>
@@ -108,9 +108,9 @@
         color:blue;
         }
          </style>
-        <a href= "Y:\my project of html\about us.html"> about us </a>
-          <a href= "Y:\my project of html\term.html"> privacy</a>
-          <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
+       <a href= "https://yogeshmahajan23.github.io/wild-animals/about%20us.html"> about us </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/term.html">  privacy </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/contact%20us.html"> contact us</a><br>
        <p>      
         Yogesh Copyright © 2024.Copyright<br>
         reserved by wild animals.
