--- a/top 10.html
+++ b/top 10.html
@@ -68,13 +68,16 @@ display:block;
 <HR>
      <center>
   <ul>
-     <a href= "file:///Y:/my%20project%20of%20html/dreamy%20qr.html"><li> Dreamy </li>
-        <a href="file:///Y:/my%20project%20of%20html/simple%20qr.html"> <li> Simple </li>    
+     <a href="https://yogeshmahajan23.github.io/wild-animals/home%20qr.html"><li>HOME</a> </li>
+     <a href="#"><LI>POEMS</a> 
+         <ul>
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/dreamy%20qr.html"><li> Dreamy </li>
+        <a href="https://yogeshmahajan23.github.io/wild-animals/simple%20qr.html"> <li> Simple </li>    
          </ul>
           </li>
-     <a href="file:///Y:/my%20project%20of%20html/c%20qr.html"><LI>FACILITES</a></li>
-     <a href="file:///Y:/my%20project%20of%20html/d%20qr.html"><LI>HISTORY</a></li>
-         <a href="file:///Y:/my%20project%20of%20html/e%20qr.html"><LI>TOP 10</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/c%20qr.html"><LI>FACILITES</a></li>
+     <a href="https://yogeshmahajan23.github.io/wild-animals/d%20qr.html"><LI>HISTORY</a></li>
+         <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> <br> <BR><BR><BR><BR><BR><BR><BR><BR></center>
 <CENTER>
          <font color="red" face="Bell MT"><h1>WILD ANIMALS</h1></font>
@@ -198,11 +201,11 @@ display:block;
         color:blue;
         }
          </style>
-        <a href= "Y:\my project of html\about us.html"> about us </a>
-          <a href= "Y:\my project of html\term.html">  privacy </a>
-          <a href= "Y:\my project of html\contact us.html"> contact us</a><br>
+         <a href= "https://yogeshmahajan23.github.io/wild-animals/about%20us.html"> about us </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/term.html">  privacy </a>
+          <a href= "https://yogeshmahajan23.github.io/wild-animals/contact%20us.html"> contact us</a><br>
               <p>
-        Yogesh Copyright © 2016.Copyright<br>
+        Yogesh Copyright © 2024.Copyright<br>
         reserved by wild animals.
         </p>
     </CENTER>
