--- a/c qr.html
+++ b/c qr.html
@@ -80,7 +80,7 @@
          <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> 
          <br> <br><br><br><br><br><br><br><br>
- <img src="Y:\my project of html\c.png" width= "300px" align="center">
+ <img src="c.jpg" width= "300px" align="center">
       
         
         </p><br><br><br><br><br><br><br><br><br>
