--- a/main file.html
+++ b/main file.html
@@ -58,7 +58,7 @@
     </style>
 <body bgcolor="orange" text="black">
    
-     <img src="Y:\my project of html\Capture1.png" width= "100px" align-top="left">
+     <img src="Capture1.jpg" width= "100px" align-top="left">
     <CENTER>
     <H1 >
         <font color="brown" face="Bell MT"> <marquee behavior="scroll" direction="left">WILD ANIMALS</marquee></font>
