--- a/simple qr.html
+++ b/simple qr.html
@@ -58,7 +58,7 @@
     </style>
 <body bgcolor="orange" text="black">
    
-     <img src="tiger.jpg" width= "100px" align-top="left">
+     <img src="Capture.jpg" width= "100px" align-top="left">
     <CENTER>
     <H1 >
         <font color="brown" face="Bell MT"> <marquee behavior="scroll" direction="left">WILD ANIMALS</marquee></font>
@@ -80,7 +80,7 @@
          <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> 
          <br> <br><br><br><br><br><br><br><br>
- <img src="Y:\my project of html\simple.png" width= "300px" align="center">
+ <img src="simple.jpg" width= "300px" align="center">
       
         
         </p><br><br><br><br><br><br><br><br><br>
