--- a/d qr.html
+++ b/d qr.html
@@ -80,7 +80,7 @@
          <a href="https://yogeshmahajan23.github.io/wild-animals/e%20qr.html"><LI>TOP 10</a></li>
      </ul> 
          <br> <br><br><br><br><br><br><br><br>
- <img src="(d)history.jpg" width= "300px" align="center">
+ <img src="d.jpg" width= "300px" align="center">
       
         
         </p><br><br><br><br><br><br><br><br><br>
