--- a/term.html
+++ b/term.html
@@ -105,8 +105,7 @@ When you visit our website
 correspondence
 ,
 or make a donation online or offline, you may 
-provide us with personal information (such as name, addre
-ss, email address, telephone numbers <br>
+provide us with personal information (such as name, address, email address, telephone numbers <br>
 and/or credit/debit card information) that you knowingly choose to disclose, which is collected on an <br>
 individual basis for various purposes. These purposes include registering to receive <br>
 donation receipts, 
